<resources>
    <string name="app_name">BookStore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cart_name">My Cart</string>
    <string name="facebook_app_id">1785399108379553</string>
    <string name="fb_login_protocol_scheme">fb1785399108379553</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_add_cart">Do you want to add book for your cart?</string>
    <string name="ok">OK</string>
    <string name="login_button">Login with Facebook</string>
    <string name="continue_button">Tap to continue</string>
    <string name="avatar_description_image_view">facebook avatar</string>
    <string name="order_button">Order</string>
    <string name="receiver_text_view">Receiver</string>
    <string name="phone_text_view">Phone</string>
    <string name="address_text_view">Address</string>
    <string name="item_text_view">List Book</string>
</resources>
